--- a/v5.3/index.html
+++ b/v5.3/index.html
@@ -251,7 +251,7 @@ Retrouvez nous sur :
 			</div>
 			<div class="col-lg-3 col-sm-6">
 			 <div class="card bg-dark text-white">
-  <img class="card-img" src="img/vp.jpg" alt="Card image">
+  <img class="card-img" src="img/vicep.jpg" alt="Card image">
   <div class="card-img-overlay">
     <h5 class="card-title">Mohammed Hadani</h5>
     <p class="card-text">Vice-président du club</p>
@@ -691,7 +691,7 @@ Retrouvez nous sur :
 			  
 		  </div>
 		  <div class="carousel-item">
-			<img src='img/VP.jpg'/>
+			<img src='img/vicep.jpg'/>
 				<blockquote class="blockquote">
 					<p class="mb-0">
 					  Had l'club 3yan bzaf, sara7a tgal.
