--- a/v6/index.html
+++ b/v6/index.html
@@ -89,7 +89,7 @@ Retrouvez nous sur :
 	<div class="jumbotron jumbotron-fluid bg-grey text-dark text-left m-0">
   <div class="container">
     <h6>Nos dernieres publications</h6>
-    <p class="lead">Vous pouvez retrouvez toutes les nouveautes du club ici</p>
+    <p class="lead">Vous pouvez retrouvez toutes les nouveautés du club ici</p>
   </div>
 </div>
 <div class="row m-0">
@@ -97,11 +97,11 @@ Retrouvez nous sur :
     <div id="main-emicatronic-carousel" class="carousel slide w-100 mb-4" data-ride="carousel">
 	<div class="row m-0">
 		<ul class="list-group col-lg-4 d-none d-lg-block p-0 carousel-indicators" style="border-radius: 0;">
-  <li class="list-group-item active text-dark" data-target="#main-emicatronic-carousel" data-slide-to="0">Ceci est une information courte que le visiteur peut lire, elle est accopagnee souvent d'une image sur la gauche 1</li>
-  <li class="list-group-item text-dark" data-target="#main-emicatronic-carousel" data-slide-to="1">Ceci est une information courte que le visiteur peut lire, elle est accopagnee souvent d'une image sur la gauche 2</li>
-  <li class="list-group-item text-dark" data-target="#main-emicatronic-carousel" data-slide-to="2">Ceci est une information courte que le visiteur peut lire, elle est accopagnee souvent d'une image sur la gauche 3</li>
-  <li class="list-group-item text-dark" data-target="#main-emicatronic-carousel" data-slide-to="3">Ceci est une information courte que le visiteur peut lire, elle est accopagnee souvent d'une image sur la gauche 4</li>
-   <li class="list-group-item text-dark" data-target="#main-emicatronic-carousel" data-slide-to="4">Ceci est une information courte que le visiteur peut lire, elle est accopagnee souvent d'une image sur la gauche 5</li>
+  <li class="list-group-item active text-dark" data-target="#main-emicatronic-carousel" data-slide-to="0">Ceci est une information courte que le visiteur peut lire, elle est accompagnée souvent d'une image sur la gauche 1</li>
+  <li class="list-group-item text-dark" data-target="#main-emicatronic-carousel" data-slide-to="1">Ceci est une information courte que le visiteur peut lire, elle est accompagnée souvent d'une image sur la gauche 2</li>
+  <li class="list-group-item text-dark" data-target="#main-emicatronic-carousel" data-slide-to="2">Ceci est une information courte que le visiteur peut lire, elle est accompagnée souvent d'une image sur la gauche 3</li>
+  <li class="list-group-item text-dark" data-target="#main-emicatronic-carousel" data-slide-to="3">Ceci est une information courte que le visiteur peut lire, elle est accompagnée souvent d'une image sur la gauche 4</li>
+   <li class="list-group-item text-dark" data-target="#main-emicatronic-carousel" data-slide-to="4">Ceci est une information courte que le visiteur peut lire, elle est accompagnée souvent d'une image sur la gauche 5</li>
   
 </ul>
 		<div class="carousel-inner col-lg-8 p-0">
@@ -464,7 +464,7 @@ Retrouvez nous sur :
 		<div class="jumbotron jumbotron-fluid bg-grey text-dark text-center">
   <div class="container">
     <h6>Galerie Photos</h6>
-    <p class="lead">Decouvrez les ateliers et les evenements organises par le club en photos</p>
+    <p class="lead">Découvrez les ateliers et les évènements organisés par le club en photos</p>
   </div>
 </div>
 		<div class="container text-dark">
@@ -534,7 +534,7 @@ Retrouvez nous sur :
 		<div>
 		<div class="jumbotron jumbotron-fluid bg-grey text-dark text-center">
   <div class="container">
-    <h6>Competition nationale de la robotique</h6>
+    <h6>Compétition nationale de la robotique</h6>
     <p class="lead">Historique du club avec la CNR</p>
   </div>
 </div>
@@ -750,7 +750,7 @@ Retrouvez nous sur :
              <div style ='background: #086082;' class="card text-white text-center overflow-hidden">
 				  <div class="card-body coord">
 					<i class="fas fa-phone fa-5x float-left"></i>
-					<h5>Telephone :</h5>
+					<h5>Téléphone :</h5>
 					+212 123 456 789
 				  </div>
 				</div>
