--- a/v6/index.html
+++ b/v6/index.html
@@ -677,7 +677,7 @@ Retrouvez nous sur :
 			<img src='img/P.jpg'/>
 				<blockquote class="blockquote">
 					<p class="mb-0">
-					  Lfya9 bkri, bdheb mchri.
+					  C'est la place d'un mot dela presidente du club.
 					</p>
 					<footer class="blockquote-footer">Fadwa Maslouhi
 					  <cite title="Company 1">Présidente du club</cite>
@@ -689,7 +689,7 @@ Retrouvez nous sur :
 			<img src='img/vicep.jpg'/>
 				<blockquote class="blockquote">
 					<p class="mb-0">
-					  Had l'club 3yan bzaf, sara7a tgal.
+					 C'est la place d'un mot du Vice-président du club
 					</p>
 					<footer class="blockquote-footer">Mohammed Hadani
 					  <cite title="Company 1">Vice-président du club</cite>
@@ -702,7 +702,7 @@ Retrouvez nous sur :
 			<img src='img/devweb.jpg'/>
 				<blockquote class="blockquote">
 					<p class="mb-0">
-					  Ana li kayn f had lclub, wa chokran.
+					  C'est la place d'un mot du Responsable du Developement Web.
 					</p>
 					<footer class="blockquote-footer">Anas Abea
 					  <cite title="Company 1">Responsable du Dev. Web</cite>
